@@ -5,12 +5,12 @@
   <parent>
     <groupId>org.cloudhoist</groupId>
     <artifactId>clojure-maven</artifactId>
-    <version>0.3.2-SNAPSHOT</version>
+    <version>0.3.3-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>clojure-maven-plexus-compiler</artifactId>
-  <version>0.3.2-SNAPSHOT</version>
+  <version>0.3.3-SNAPSHOT</version>
   <name>clojure-maven-plexus-compiler</name>
   <description>Clojure Compiler Component</description>
 
@@ -19,13 +19,13 @@
     <dependency>
       <groupId>org.clojure</groupId>
       <artifactId>clojure</artifactId>
-      <version>1.2.1</version>
+      <version>${clojure.version}</version>
     </dependency>
 
     <dependency>
       <groupId>classlojure</groupId>
       <artifactId>classlojure</artifactId>
-      <version>0.5.2</version>
+      <version>0.6.3</version>
     </dependency>
 
     <dependency>
@@ -61,46 +61,34 @@
   </dependencies>
 
   <build>
-    <resources>
-      <resource>
-	<directory>src/main/clojure</directory>
-      </resource>
-      <resource>
-	<directory>src/main/resources</directory>
-      </resource>
-    </resources>
     <plugins>
       <plugin>
-	<groupId>com.theoryinpractise</groupId>
-	<artifactId>clojure-maven-plugin</artifactId>
-	<version>1.3.7</version>
-	<configuration>
-	  <sourceDirectories>
-	    <sourceDirectory>src/main/clojure</sourceDirectory>
-	  </sourceDirectories>
-	  <testSourceDirectories>
-	    <testSourceDirectory>src/test/clojure</testSourceDirectory>
-	  </testSourceDirectories>
-	  <clojureOptions>-Xmx512m -Djava.awt.headless=true -XX:MaxPermSize=256m</clojureOptions>
-          <temporaryOutputDirectory>false</temporaryOutputDirectory>
-	  <warnOnReflection>true</warnOnReflection>
-	</configuration>
-	<executions>
-	  <execution>
-	    <id>compile-clojure</id>
-	    <phase>compile</phase>
-	    <goals>
-	      <goal>compile</goal>
-	    </goals>
-	  </execution>
-	  <execution>
-	    <id>test-clojure</id>
-	    <phase>test</phase>
-	    <goals>
-	      <goal>test</goal>
-	    </goals>
-	  </execution>
-	</executions>
+        <groupId>org.cloudhoist.plugin</groupId>
+        <artifactId>zi</artifactId>
+        <executions>
+          <execution>
+            <id>default-resources</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>resources</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>default-compile</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>compile</goal>
+            </goals>
+            <configuration>
+              <includes>
+                <include>**/ClojureCompiler.clj</include>
+              </includes>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-site-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
